added start/end date in adhyayan along with comments. added option for admin to change room booking from pending to pending checkin for nri and cash payments

--- a/admin/adhyayan/adhyayanReport.html
+++ b/admin/adhyayan/adhyayanReport.html
@@ -42,6 +42,7 @@ width: 100%;
   <script src="../../style/js/tableSortFilter.js" defer></script>
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
   <script src="../../style/js/exportToExcel.js"></script>
+  <script src="../../style/js/formatDate.js"></script>
 </head>
 <body>
   <div class="header">
@@ -70,7 +71,10 @@ width: 100%;
                   <tr>
                     <th>#</th>
                     <th>Adhyayan Name</th>
+                    <th>Adhyayan Id</th>
                     <th>Location</th>
+                    <th>Start Date</th>
+                    <th>End Date</th>
                     <th>Swadhyay Karta</th>
                     <th>Confirmed Count</th>
                     <th>Pending Count</th>
