small change in gate form

--- a/admin/gate/gateOutTap.html
+++ b/admin/gate/gateOutTap.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gate Check-In</title>
+    <title>Gate Check-Out</title>
 
     <!-- Load jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -57,7 +57,7 @@
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h1>Tap your card for gate entry</h1>
+              <h1>Tap your card for gate exit</h1>
             </div>
 
             <div id="alert" class="big-alert" style="display: none;"></div>
