added scanner and it's report for utsav

--- a/admin/utsav/utsavReport.html
+++ b/admin/utsav/utsavReport.html
@@ -70,6 +70,7 @@ width: 100%;
                     <th>Serial No</th>
                     <th>Utsav Name</th>
                     <th>Confirmed Count</th>
+                    <th>Checkedin Count</th>
                     <th>Pending Count</th>
                     <th>Max Count</th>
                     <th>WaitList Count</th>
