added description in all accounts report

--- a/admin/account/creditTransaction.html
+++ b/admin/account/creditTransaction.html
@@ -76,7 +76,10 @@
       <th>Checkout Date</th>
       <th>Amount Paid</th>
       <th>Credits Used</th>
+      <th>Description/Admin Comments</th>
       <th>Status</th>
+      <th>Booked At</th>
+      <th>Cancelled At</th>
       <th>Razorpay Order ID</th>
       <th>BookedBy - Card No</th>
       <th>BookedBy - Name</th>
