--- a/admin/account/voucherCreation.html
+++ b/admin/account/voucherCreation.html
@@ -101,6 +101,7 @@
       <th>Checkout Date</th>
       <th>Amount Paid</th>
       <th>Credits Used</th>
+      <th>Description/Admin Comments</th>
       <th>Status</th>
       <th>Razorpay Order ID</th>
       <th>BookedBy - Card No</th>
