--- a/admin/account/pendingTransaction.html
+++ b/admin/account/pendingTransaction.html
@@ -76,6 +76,7 @@
       <th>Checkout Date</th>
       <th>Amount Paid</th>
       <th>Credits Used</th>
+      <th>Description/Admin Comments</th>     
       <th>Status</th>
       <th>Razorpay Order ID</th>
       <th>BookedBy - Card No</th>
