--- a/admin/utsav/utsavCheckin.html
+++ b/admin/utsav/utsavCheckin.html
@@ -11,7 +11,7 @@
   <script src="../../style/js/clockpicker.js"></script>
   <script src="../../style/js/custom.js"></script>
   <script src="../../style/js/config.js"></script>
-  <script src="../../sessionstorage.js"></script>
+  <!-- <script src="../../sessionstorage.js"></script> -->
   <script src="https://unpkg.com/html5-qrcode"></script>
   <script src="utsavCheckin.js"></script>
 
@@ -81,10 +81,10 @@
     </div>
   </div>
 
-  <script src="/style/js/roleCheck.js"></script>
+  <!-- <script src="/style/js/roleCheck.js"></script>
   <script>
     checkRoleAccess(['utsavAdmin', 'superAdmin']);
-  </script>
+  </script> -->
 </body>
 </html>
 
