added option to upload wifi codes

--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -54,6 +54,8 @@
                 <a class="menu-btn" href="travel/index.html">Travel Management</a>
                 <a class="menu-btn" href="maintenance/index.html">Maintenance Management</a>
                 <a class="menu-btn" href="avt/index.html">AVT Management</a>
+                <a class="menu-btn" href="wifi/index.html">WiFi Management</a>
+                <a class="menu-btn" href="smilestones/index.html">Smilestones Management</a>
                 <a class="menu-btn" href="utsav/index.html">Utsav Management</a>
               </div>
             </div>
