added wifi code usage report

--- a/admin/wifi/index.html
+++ b/admin/wifi/index.html
@@ -49,6 +49,7 @@
             <div class="admin-menu">
               <div class="menu-grid">
                 <a class="menu-btn" href="uploadCodes.html">Upload New Codes</a>
+                <a class="menu-btn" href="wifiReport.html">Wifi Codes Usage Report</a>
                 </div>
             </div>
             
