account report changes - 1. added food, lunch, dinner, breakfast categories 2. added flat category 3. added sAtshrut transaction details 4. added checkin, checkout, nights data for flat category

--- a/admin/account/voucherCreation.html
+++ b/admin/account/voucherCreation.html
@@ -63,6 +63,7 @@
 <div style="margin-bottom: 15px; display: flex; gap: 15px; flex-wrap: wrap; align-items: center;">
   <label><input type="radio" name="categoryFilter" value="all" checked /> All</label>
   <label><input type="radio" name="categoryFilter" value="room" /> Room</label>
+  <label><input type="radio" name="categoryFilter" value="flat" /> Flat</label>
   <label>
   <input type="radio" name="categoryFilter" value="adhyayan" /> Adhyayan
   <select id="adhyayanDropdown" style="margin-left: 8px; display: none; max-width: 300px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" title="Select Adhyayan">
