added a new page of credits usage report, fixed credits breakdown report

--- a/admin/account/index.html
+++ b/admin/account/index.html
@@ -51,6 +51,7 @@
                 <a class="menu-btn" href="voucherCreation.html">Completed Transaction Report</a>
                 <a class="menu-btn" href="pendingTransaction.html">Pending Transaction Report</a>
                 <a class="menu-btn" href="creditTransaction.html">Credited Transaction Report</a>
+                <a class="menu-btn" href="debitTransaction.html">Credits Used Report</a>
                 <a class="menu-btn" href="settlementReport.html">Settlement Report</a>
                 <a class="menu-btn" href="settlementRecon.html">Settlement Reconciliation</a>
                 <a class="menu-btn" href="settlementBreakdown.html">Settlement BreakDown Report </a>
