added mumbai location in adhyayan for pgs and fetching all adhyayan in report for vikas uncle

--- a/admin/adhyayan/createAdhyayan.html
+++ b/admin/adhyayan/createAdhyayan.html
@@ -61,6 +61,7 @@
                     <option value="">Select Location</option>
                     <option value="Research Centre">Parli Research Centre</option>
                     <option value="Rajndangaon">Mokshdham Rajndangaon</option>
+                    <option value="Mumbai">Mumbai</option>
                     <option value="Kolkata">Kolkata Centre</option>
                   </select>
                 </div>
