--- a/admin/adhyayan/createAdhyayan.html
+++ b/admin/adhyayan/createAdhyayan.html
@@ -60,7 +60,7 @@
                   <select id="location" name="location" class="form-control" required>
                     <option value="">Select Location</option>
                     <option value="Research Centre">Parli Research Centre</option>
-                    <option value="Rajndangaon">Mokshdham Rajndangaon</option>
+                    <option value="Rajnandgaon">Mokshdham Rajndangaon</option>
                     <option value="Mumbai">Mumbai</option>
                     <option value="Kolkata">Kolkata Centre</option>
                   </select>
