1. single fetch call and page for all centres adhyayan 2. option to soft delete adhyayan 3. pgs report

--- a/admin/adhyayan/adhyayanCentre.html
+++ b/admin/adhyayan/adhyayanCentre.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Outstation Adhyayan Registration Report</title>
+    <title> Adhyayan Registration Report</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -43,14 +43,16 @@
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h1>Outstation Adhyayan Registration Report</h1>
+              <h1>Adhyayan Registration Report</h1>
             </div>
 
             <div class="admin-menu">
               <div class="menu-grid">
-                <a class="menu-btn" href="kolkataAdhyayanReport.html">Kolkata Adhyayan Summary Report</a>
-                <a class="menu-btn" href="rajnandgaonAdhyayanReport.html">Rajnandgaon Adhyayan Summary Report</a>
-                <a class="menu-btn" href="dhuleAdhyayanReport.html">Dhule Adhyayan Summary Report</a>
+                <a class="menu-btn" href="adhyayanReport.html?location=Research%20Centre">RC Adhyayan Summary Report</a>
+                <a class="menu-btn" href="adhyayanReport.html?location=Kolkata">Kolkata Adhyayan Summary Report</a>
+                <a class="menu-btn" href="adhyayanReport.html?location=Rajnandgaon">Rajnandgaon Adhyayan Summary Report</a>
+                <a class="menu-btn" href="adhyayanReport.html?location=Dhule">Dhule Adhyayan Summary Report</a>
+                <a class="menu-btn" href="pgsReport.html">PGS Summary Report</a>
                 </div>
             </div>
             
