--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -105,22 +105,40 @@
         ],
         adhyayanAdminKol: [
           {
-            href: 'adhyayan/kolkataAdhyayanReport.html',
+            href: 'adhyayan/adhyayanReport.html?location=Kolkata',
             text: 'Kolkata Adhyayan Report'
           }
         ],
+        // adhyayanAdminKol: [
+        //   {
+        //     href: 'adhyayan/kolkataAdhyayanReport.html',
+        //     text: 'Kolkata Adhyayan Report'
+        //   }
+        // ],
         adhyayanAdminRaj: [
           {
-            href: 'adhyayan/rajnandgaonAdhyayanReport.html',
+            href: 'adhyayan/adhyayanReport.html?location=Rajnandgaon',
             text: 'Rajnandgaon Adhyayan Report'
           }
         ],
+        // adhyayanAdminRaj: [
+        //   {
+        //     href: 'adhyayan/rajnandgaonAdhyayanReport.html',
+        //     text: 'Rajnandgaon Adhyayan Report'
+        //   }
+        // ],
         adhyayanAdminDhu: [
           {
-            href: 'adhyayan/dhuleAdhyayanReport.html',
+            href: 'adhyayan/adhyayanReport.html?location=Dhule',
             text: 'Dhule Adhyayan Report'
           }
         ],
+        // adhyayanAdminDhu: [
+        //   {
+        //     href: 'adhyayan/dhuleAdhyayanReport.html',
+        //     text: 'Dhule Adhyayan Report'
+        //   }
+        // ],
         travelAdmin: [{ href: 'travel/index.html', text: 'Travel Management' }],
         travelAdminDri: [
           {
