--- a/admin/adhyayan/fetchAllAdhyayan.html
+++ b/admin/adhyayan/fetchAllAdhyayan.html
@@ -58,7 +58,7 @@
                       <th><center>Start Date</center></th>
                       <th><center>End Date</center></th>
                       <th><center>Max Count</center></th>
-                      <th><center>Status</center></th>
+                      <th><center>Change Status To</center></th>
                       <th><center>Action</center></th>
                     </tr>
                   </thead>
