--- a/admin/adhyayan/index.html
+++ b/admin/adhyayan/index.html
@@ -50,8 +50,7 @@
               <div class="menu-grid">
                 <a class="menu-btn" href="createAdhyayan.html">Add New Adhyayan</a>
                 <a class="menu-btn" href="fetchAllAdhyayan.html">Edit Existing Adhyayan</a>
-                <a class="menu-btn" href="adhyayanReport.html">RC Adhyayan Summary Report</a>
-                <a class="menu-btn" href="outstationadhyayanReport.html">Outstation Adhyayan Summary Report</a>
+                <a class="menu-btn" href="adhyayanCentre.html">Adhyayan Summary Report</a>
                 <a class="menu-btn" href="adhyayanStatusUpdate.html">Adhyayan Status Update</a>
               </div>
             </div>
