--- a/admin/adhyayan/pgsReport.html
+++ b/admin/adhyayan/pgsReport.html
@@ -1,6 +1,6 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['officeAdmin', 'adhyayanAdmin', 'superAdmin', 'adhyayanAdminDhu']); // customize allowed roles per page
+  checkRoleAccess(['officeAdmin', 'adhyayanAdmin', 'superAdmin']); // customize allowed roles per page
 </script>
 
 <!DOCTYPE html>
@@ -8,7 +8,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dhule Adhyayan Report</title>
+  <title>PGS Report</title>
 
   <!-- Load jQuery first -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -38,10 +38,11 @@ width: 100%;
   <script src="../../style/js/custom.js"></script>
   <script src="../../style/js/config.js"></script>
   <script src="/sessionstorage.js"></script>
-  <script src="dhuleAdhyayanReport.js"></script>
+  <script src="pgsReport.js"></script>
   <script src="../../style/js/tableSortFilter.js" defer></script>
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
   <script src="../../style/js/exportToExcel.js"></script>
+  <script src="../../style/js/formatDate.js"></script>
 </head>
 <body>
   <div class="header">
@@ -59,18 +60,21 @@ width: 100%;
       <div class="whitesec">
         <div class="inner-padding">
           <div class="frm-head">
-            <h1>Dhule Adhyayan Report</h1>
+            <h1>PGS Report</h1>
           </div>
 
           <div class="form">
             <input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
-            <div class="table-responsive">
+              <div class="table-responsive">
               <table id="waitlistTable" class="table table-striped table-bordered">
                 <thead>
                   <tr>
                     <th>#</th>
                     <th>Adhyayan Name</th>
+                    <th>Adhyayan Id</th>
                     <th>Location</th>
+                    <th>Start Date</th>
+                    <th>End Date</th>
                     <th>Swadhyay Karta</th>
                     <th>Confirmed Count</th>
                     <th>Pending Count</th>
