1. read only access 2. volunteer list 3. added package column and name 4. given access to change status from cancelled to confirmed 5. added transaction status column so that they can know who has paid and then cancelled.

--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -20,7 +20,8 @@
     'adhyayanAdminRaj',
     'adhyayanAdminDhu',
     'avtAdmin',
-    'wifiAdmin'
+    'wifiAdmin',
+    'readOnlyAdmin'
   ]);
 </script>
 
@@ -109,36 +110,18 @@
             text: 'Kolkata Adhyayan Report'
           }
         ],
-        // adhyayanAdminKol: [
-        //   {
-        //     href: 'adhyayan/kolkataAdhyayanReport.html',
-        //     text: 'Kolkata Adhyayan Report'
-        //   }
-        // ],
         adhyayanAdminRaj: [
           {
             href: 'adhyayan/adhyayanReport.html?location=Rajnandgaon',
             text: 'Rajnandgaon Adhyayan Report'
           }
         ],
-        // adhyayanAdminRaj: [
-        //   {
-        //     href: 'adhyayan/rajnandgaonAdhyayanReport.html',
-        //     text: 'Rajnandgaon Adhyayan Report'
-        //   }
-        // ],
         adhyayanAdminDhu: [
           {
             href: 'adhyayan/adhyayanReport.html?location=Dhule',
             text: 'Dhule Adhyayan Report'
           }
         ],
-        // adhyayanAdminDhu: [
-        //   {
-        //     href: 'adhyayan/dhuleAdhyayanReport.html',
-        //     text: 'Dhule Adhyayan Report'
-        //   }
-        // ],
         travelAdmin: [{ href: 'travel/index.html', text: 'Travel Management' }],
         travelAdminDri: [
           {
@@ -166,6 +149,7 @@
         ],
         utsavAdmin: [{ href: 'utsav/index.html', text: 'Utsav Management' }],
         avtAdmin: [{ href: 'avt/index.html', text: 'AVT Management' }],
+        readOnlyAdmin: [{ href: 'utsav/utsavReport.html', text: 'Utsav Report' }],
         wifiAdmin: [{ href: 'wifi/index.html', text: 'WiFi Management' }]
       };
 
