--- a/admin/utsav/index.html
+++ b/admin/utsav/index.html
@@ -55,6 +55,7 @@
                 <a class="menu-btn" href="utsavStatusUpdate.html">Utsav Status Update</a>
                 <a class="menu-btn" href="createPackage.html">Add New Utsav Package</a>
                 <a class="menu-btn" href="fetchAllPackage.html">Edit Existing Utsav Package</a>
+                <a class="menu-btn" href="utsavVolunteers.html">Volunteers List</a>
                 <a class="menu-btn" href="utsavCheckin.html">Utsav Checkin</a>               
               </div>
             </div>
