--- a/admin/utsav/utsavReport.html
+++ b/admin/utsav/utsavReport.html
@@ -1,7 +1,7 @@
 
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['utsavAdmin', 'superAdmin']); // customize allowed roles per page
+  checkRoleAccess(['utsavAdmin', 'superAdmin', 'readOnlyAdmin']); // customize allowed roles per page
 </script>
 
 <!DOCTYPE html>
@@ -76,6 +76,7 @@ width: 100%;
                     <th>WaitList Count</th>
                     <th>Self_Cancelled Count</th>
                     <th>Admin/Cron Cancelled Count</th>
+                    <th>Volunteer List</th>
                     <th>Status</th>
                     <th>Action</th>
                   </tr>
