changed read only role name to utsav specific

--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -21,7 +21,7 @@
     'adhyayanAdminDhu',
     'avtAdmin',
     'wifiAdmin',
-    'readOnlyAdmin'
+    'utsavAdminReadOnly'
   ]);
 </script>
 
@@ -149,7 +149,7 @@
         ],
         utsavAdmin: [{ href: 'utsav/index.html', text: 'Utsav Management' }],
         avtAdmin: [{ href: 'avt/index.html', text: 'AVT Management' }],
-        readOnlyAdmin: [{ href: 'utsav/utsavReport.html', text: 'Utsav Report' }],
+        utsavAdminReadOnly: [{ href: 'utsav/utsavReport.html', text: 'Utsav Report' }],
         wifiAdmin: [{ href: 'wifi/index.html', text: 'WiFi Management' }]
       };
 
