--- a/admin/utsav/utsavReport.html
+++ b/admin/utsav/utsavReport.html
@@ -1,7 +1,7 @@
 
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['utsavAdmin', 'superAdmin', 'readOnlyAdmin']); // customize allowed roles per page
+  checkRoleAccess(['utsavAdmin', 'superAdmin', 'utsavAdminReadOnly']); // customize allowed roles per page
 </script>
 
 <!DOCTYPE html>
