--- a/admin/utsav/createUtsav.html
+++ b/admin/utsav/createUtsav.html
@@ -74,6 +74,16 @@
                   <label for="comments">Comments:</label>
                   <textarea id="comments" name="comments" rows="4" class="form-control"></textarea>
                 </div>
+                
+                <div class="form-group">
+                  <label for="location">Location:</label>
+                  <input type="location" id="location" name="location" class="form-control" required />
+                </div>
+                
+                <div class="form-group">
+                  <label for="registration_deadline">Registration Deadline:</label>
+                  <input type="date" id="registration_deadline" name="registration_deadline" class="form-control" required />
+                </div>
 
                 <div class="form-group form-submit">
                   <button type="submit" class="btn btn-primary">Create Utsav</button>
