added location and registration deadline in fetchallutsav

--- a/admin/utsav/fetchAllUtsav.html
+++ b/admin/utsav/fetchAllUtsav.html
@@ -55,7 +55,9 @@
                       <th><center>Utsav Name</center></th>
                       <th><center>Start Date</center></th>
                       <th><center>End Date</center></th>
+                      <th><center>Registration Deadline</center></th>
                       <th><center>Max Count</center></th>
+                      <th><center>Location</center></th>
                       <th><center>Status</center></th>
                       <th><center>Action</center></th>
                       <th><center>Add Package</center></th>
