utsav checkin bug resolved

--- a/admin/utsav/utsavReport.html
+++ b/admin/utsav/utsavReport.html
@@ -79,6 +79,7 @@ width: 100%;
                     <th>Volunteer List</th>
                     <th>Status</th>
                     <th>Action</th>
+                    <th>Scanner</th> 
                   </tr>
                 </thead>
                 <tbody id="utsavTable">
