--- a/admin/wifi/index.html
+++ b/admin/wifi/index.html
@@ -50,6 +50,7 @@
               <div class="menu-grid">
                 <a class="menu-btn" href="uploadCodes.html">Upload New Codes</a>
                 <a class="menu-btn" href="wifiReport.html">Wifi Codes Usage Report</a>
+                <a class="menu-btn" href="permanentCodeRequests.html">Permanent Code Requests</a>
                 </div>
             </div>
             
