--- a/admin/food/manageBulkFood.html
+++ b/admin/food/manageBulkFood.html
@@ -1,6 +1,6 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['foodAdmin', 'superAdmin']);
+  checkRoleAccess(['foodAdmin', 'superAdmin', 'foodAdminSS']);
 </script>
 
 <!DOCTYPE html>
@@ -94,7 +94,7 @@
             <form id="bulkFoodBookingForm">
               <div class="form-group">
                 <label for="cardno">Card No:</label>
-                <input type="tel" class="form-control" id="cardno" name="cardno" required />
+                <input type="tel" class="form-control" id="cardno" name="cardno"  />
               </div>
 <div class="form-group">
   <label for="mobno">Mobile No.:</label>
