changes - 1. restrict Smilestone to book food after 11am. 2. restrict Smilestone to edit food after 8pm. 3. show only today onwards bookings. 4. don't show Smilestone to issue plate. 5. change name of ss role. 6. allow issuing plate for today's date only. 7. improvise foodReport to show breakdown of guest issued plate and no-show count. and give option to issue guest plate from there also 8. changes spicy/non-spicy naming convention in form 9. add option to delete multiple meals together

--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -22,7 +22,7 @@
     'avtAdmin',
     'wifiAdmin',
     'utsavAdminReadOnly',
-    'foodAdminSS'
+    'smilesAdmin'
   ]);
 </script>
 
@@ -152,7 +152,7 @@
         avtAdmin: [{ href: 'avt/index.html', text: 'AVT Management' }],
         utsavAdminReadOnly: [{ href: 'utsav/utsavReport.html', text: 'Utsav Report' }],
         wifiAdmin: [{ href: 'wifi/index.html', text: 'WiFi Management' }],
-        foodAdminSS: [{ href: 'food/manageBulkFood.html', text: 'Bulk Food Booking' }]
+        smilesAdmin: [{ href: 'food/manageBulkFood.html', text: 'Bulk Food Booking' }]
       };
 
       // Function to populate buttons based on user roles
