--- a/admin/food/manageBulkFood.html
+++ b/admin/food/manageBulkFood.html
@@ -1,6 +1,6 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['foodAdmin', 'superAdmin', 'foodAdminSS']);
+  checkRoleAccess(['foodAdmin', 'superAdmin', 'smilesAdmin']);
 </script>
 
 <!DOCTYPE html>
@@ -158,10 +158,9 @@
                   <th>Breakfast Count</th>
                   <th>Lunch Count</th>
                   <th>Dinner Count</th>
-                  <th>Breakfast Issued </th>
-                  <th>Lunch Issued</th>
-                  <th>Dinner Issued</th>
-                  
+                  <th class="issued-header">Breakfast Issued</th>
+                  <th class="issued-header">Lunch Issued</th>
+                  <th class="issued-header">Dinner Issued</th>
                 </tr>
               </thead>
               <tbody id="bookingsTableBody">
