added phone scanner option for meal plate issue

--- a/admin/food/index.html
+++ b/admin/food/index.html
@@ -54,6 +54,8 @@
                 <a class="menu-btn" href="plateCount.html">Plates Issued</a>
                 <a class="menu-btn" href="foodReports.html">Food Reports</a>
                 <a class="menu-btn" href="fetchMenu.html">Menu Management</a>
+                <a class="menu-btn" href="issuePlateScan.html">Issue Plate - Scanner</a>
+                
               </div>
             </div>
 
