--- a/admin/utsav/utsavBookingslist.html
+++ b/admin/utsav/utsavBookingslist.html
@@ -50,6 +50,8 @@
   <label for="packageFilter"><b>Filter by Package:</b></label>
   <select id="packageFilter"></select>
   <button id="downloadAll" class="btn btn-primary">Download All Registrations</button>
+  <button id="downloadRoomNoFormat" class="btn btn-secondary"> Download RoomNo Upload Format</button>
+  <button id="uploadRoomNoBtn" class="btn btn-primary">Upload Room No</button>
   <button id="downloadPackage" class="btn btn-primary">Download This Package Registrations</button>
   <button id="centerSummaryBtn" class="btn btn-secondary">Center-wise Summary</button>
 </div>
@@ -114,3 +116,4 @@
 
 </body>
 </html>
+
