changes - 1. added read-only access roles for co-ordinators 2. added columns to get link for adhyayan feedback form, adhyayan registration form, adhyayayn feedback summary, adhyayan feedbacks list

--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -22,7 +22,8 @@
     'avtAdmin',
     'wifiAdmin',
     'utsavAdminReadOnly',
-    'smilesAdmin'
+    'smilesAdmin',
+    'adhyayanAdminReadOnly',
   ]);
 </script>
 
@@ -146,6 +147,12 @@
           {
             href: 'maintenance/maintenance.html?department=electrical',
             text: 'Electrical Management'
+          }
+        ],
+        adhyayanAdminReadOnly: [
+          {
+            href: 'adhyayan/adhyayanReport.html?location=Research%20Centre',
+            text: 'Adhyayan Report'
           }
         ],
         utsavAdmin: [{ href: 'utsav/index.html', text: 'Utsav Management' }],
