--- a/admin/adhyayan/adhyayanReport.html
+++ b/admin/adhyayan/adhyayanReport.html
@@ -1,6 +1,6 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['officeAdmin', 'adhyayanAdmin', 'superAdmin', 'adhyayanAdminKol','adhyayanAdminRaj', 'adhyayanAdminDhu']); // customize allowed roles per page
+  checkRoleAccess(['officeAdmin', 'adhyayanAdmin', 'superAdmin', 'adhyayanAdminKol','adhyayanAdminRaj', 'adhyayanAdminDhu', 'adhyayanAdminReadOnly']); // customize allowed roles per page
 </script>
 
 <!DOCTYPE html>
@@ -25,6 +25,35 @@ overflow-x: auto;
 .table {
 min-width: 1000px; /* Or adjust based on expected column count */
 width: 100%;
+}
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1000; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgba(0,0,0,0.5); 
+}
+
+.modal-content {
+  background-color: #fff;
+  margin: 10% auto; 
+  padding: 20px;
+  border-radius: 8px;
+  width: 400px;
+  position: relative;
+}
+
+.close-modal {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  color: #333;
+  font-size: 24px;
+  cursor: pointer;
 }
 
   </style>
@@ -80,6 +109,10 @@ width: 100%;
                     <th>Pending Count</th>
                     <th>Max Count</th>
                     <th>WaitList Count</th>
+                    <th>Adhyayan Link</th>
+                    <th>Feedback Form Link</th>
+                    <th>Feedbacks Received</th>
+                    <th>Feedback Summary</th>
                     <th>Status</th>
                     <th>Action</th>
                   </tr>
@@ -96,5 +129,14 @@ width: 100%;
       </div>
     </div>
   </div>
+  <!-- Feedback Stats Modal -->
+<div id="feedbackModal" class="modal">
+  <div class="modal-content">
+    <span class="close-modal">&times;</span>
+    <h2 id="feedbackModalHeading">Feedback Summary</h2> <!-- dynamic heading -->
+    <div id="feedbackStats"></div>
+  </div>
+</div>
+
 </body>
 </html>
