--- a/admin/wifi/permanentCodeRequests.html
+++ b/admin/wifi/permanentCodeRequests.html
@@ -68,6 +68,7 @@
     <th data-key="cardno">Card No</th>
     <th data-key="issuedto">Issued To</th>
     <th data-key="mobno">Mobile</th>
+    <th data-key="email">Email Id</th>
     <th data-key="res_status">Res Status</th>
     <th data-key="requested_at">Requested At</th>
     <th data-key="status">Status</th>
