created page for seeing support tickets

--- a/admin/maintenance/index.html
+++ b/admin/maintenance/index.html
@@ -57,6 +57,9 @@
                 <a class="menu-btn" href="maintenance.html?department=electrical">
                   Electrical Requests
                 </a>
+                <a class="menu-btn" href="supportTickets.html">
+                  Support Tickets
+                </a>
               </div>
             </div>
 
