added self cancelled and admin canclled list - same like utsav

--- a/admin/adhyayan/adhyayanReport.html
+++ b/admin/adhyayan/adhyayanReport.html
@@ -109,6 +109,8 @@ width: 100%;
                     <th>Pending Count</th>
                     <th>Max Count</th>
                     <th>WaitList Count</th>
+                    <th>Self Cancelled Count</th>
+                    <th>Admin/Cron Cancelled Count</th>
                     <th>Adhyayan Link</th>
                     <th>Feedback Form Link</th>
                     <th>Feedbacks Received</th>
