--- a/admin/adhyayan/adhyayanBookingslist.html
+++ b/admin/adhyayan/adhyayanBookingslist.html
@@ -65,7 +65,8 @@
       <th>Gender</th>
       <th>Center</th>
       <th>Res Status</th>
-      <th>Status</th>
+      <th>Booking Status</th>
+      <th>Transaction Status</th>
       <th>Booked By</th>
       <th>Action</th>
     </tr>
