--- a/admin/travel/fetchUpcomingBookings.html
+++ b/admin/travel/fetchUpcomingBookings.html
@@ -238,5 +238,61 @@
   </div>
 </div>
 
+<div id="amountModal" class="modal" style="
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.6);
+  z-index: 9999;
+  overflow: auto;
+">
+  <div class="modal-content" style="
+    background: white;
+    padding: 2rem;
+    margin: 10% auto;
+    width: 90%;
+    max-width: 400px;
+    position: relative;
+    border-radius: 10px;
+  ">
+    <span id="closeAmountModal" style="
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      font-size: 24px;
+      cursor: pointer;
+    ">&times;</span>
+
+    <h3>Update Transaction Amount</h3>
+    <form id="amountForm">
+      <!-- Booking ID -->
+      <div class="form-group">
+        <label for="amountBookingId">Booking ID:</label>
+        <input type="text" id="amountBookingId" class="form-control" readonly>
+      </div>
+
+      <!-- Name -->
+      <div class="form-group">
+        <label for="amountIssuedTo">Mumukshu Name:</label>
+        <input type="text" id="amountIssuedTo" class="form-control" readonly>
+      </div>
+
+      <!-- Amount -->
+      <div class="form-group">
+        <label for="newAmount">New Amount:</label>
+        <input type="number" id="newAmount" class="form-control" required>
+      </div>
+
+      <div class="form-group form-submit" style="margin-top: 15px;">
+        <button type="submit" class="btn btn-primary">Update Amount</button>
+        <button type="button" id="cancelAmountUpdate" class="btn btn-secondary">Cancel</button>
+      </div>
+    </form>
+  </div>
+</div>
+
   </body>
 </html>
