--- a/admin/utsav/createUtsav.html
+++ b/admin/utsav/createUtsav.html
@@ -68,7 +68,7 @@
 
                 <div class="form-group">
                   <label for="registration_deadline">Registration Deadline:</label>
-                  <input type="text" id="registration_deadline" name="registration_deadline" class="form-control" required />
+                  <input type="text" id="registration_deadline" name="registration_deadline" class="form-control" placeholder="dd/mm/yyyy" required />
                 </div>
 
                 <div class="form-group form-submit">
