--- a/admin/card/updateCard.html
+++ b/admin/card/updateCard.html
@@ -90,6 +90,14 @@
                 <textarea id="address" name="address" rows="4" class="form-control" required></textarea>
               </div>
 
+              
+              <div class="form-group">
+                <label for="country">Country:</label>
+                <select id="country" name="country" class="form-control" required>
+                  <option value="">Select Country</option>
+                </select>
+              </div>
+
               <div class="form-group">
                 <label for="state">State:</label>
                 <select id="state" name="state" class="form-control" required></select>
