--- a/admin/utsav/utsavReport.html
+++ b/admin/utsav/utsavReport.html
@@ -80,6 +80,7 @@ width: 100%;
                     <th>Status</th>
                     <th>Action</th>
                     <th>Scanner</th> 
+                    <th>Register for Mumukshu</th>
                   </tr>
                 </thead>
                 <tbody id="utsavTable">
