given option to vinay bhai for rajnandgaon utsav

--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -24,6 +24,7 @@
     'utsavAdminReadOnly',
     'smilesAdmin',
     'adhyayanAdminReadOnly',
+    'utsavAdminRaj'
   ]);
 </script>
 
@@ -122,6 +123,12 @@
           {
             href: 'adhyayan/adhyayanReport.html?location=Dhule',
             text: 'Dhule Adhyayan Report'
+          }
+        ],
+        utsavAdminRaj: [
+          {
+            href: 'utsav/utsavReport.html?location=Rajnandgaon',
+            text: 'Rajnandgaon Utsav Report'
           }
         ],
         travelAdmin: [{ href: 'travel/index.html', text: 'Travel Management' }],
