--- a/admin/utsav/uploadRoomNo.html
+++ b/admin/utsav/uploadRoomNo.html
@@ -1,6 +1,6 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['utsavAdmin', 'superAdmin']);
+  checkRoleAccess(['utsavAdmin', 'superAdmin', 'utsavAdminRaj']);
 </script>
 
 <!DOCTYPE html>
