--- a/admin/utsav/utsavCheckinReport.html
+++ b/admin/utsav/utsavCheckinReport.html
@@ -1,7 +1,7 @@
 <!-- Keep all your original includes intact -->
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['utsavAdmin', 'superAdmin', 'utsavAdminReadOnly']);
+  checkRoleAccess(['utsavAdmin', 'superAdmin', 'utsavAdminReadOnly', 'utsavAdminRaj']);
 </script>
 
 <!DOCTYPE html>
