--- a/admin/utsav/utsavRegistration.html
+++ b/admin/utsav/utsavRegistration.html
@@ -1,6 +1,6 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['utsavAdmin', 'superAdmin']);
+  checkRoleAccess(['utsavAdmin', 'superAdmin', 'utsavAdminRaj']);
   // utsavAdminReadOnly should not access booking form
 </script>
 
