--- a/admin/adhyayan/fetchAllAdhyayan.html
+++ b/admin/adhyayan/fetchAllAdhyayan.html
@@ -57,6 +57,7 @@
                       <th><center>Swadhyay Karta</center></th>
                       <th><center>Start Date</center></th>
                       <th><center>End Date</center></th>
+                      <th><center>Food Allowed</center></th>
                       <th><center>Max Count</center></th>
                       <th><center>Change Status To</center></th>
                       <th><center>Action</center></th>
