--- a/admin/adhyayan/updateAdhyayan.html
+++ b/admin/adhyayan/updateAdhyayan.html
@@ -83,6 +83,14 @@
                 </div>
 
                 <div class="form-group">
+                  <label for="food_allowed">Food Allowed:</label>
+                  <select id="food_allowed" name="food_allowed" class="form-control" required>
+  <option value="1">Yes</option>
+  <option value="0">No</option>
+</select>
+                </div>
+
+                <div class="form-group">
                   <label for="amount">Amount:</label>
                   <input type="number" id="amount" name="amount" class="form-control" required />
                 </div>
